Add feedback section

--- a/index.html
+++ b/index.html
@@ -2416,4 +2416,9 @@ while True:
     Graphic Era Hill University
   </p>
 </footer>
+<footer class="site-footer">
+  <p>
+    © 2025 Abhinay Pratap Singh. Built while learning.
+  </p>
+</footer>
 
